crates/codira_codegen/src/snapshots/codira_codegen__test__arithmetic_op_i32.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func add(a: i32, b: i32) -> i32 { a + b }\n    public func subtract(a: i32, b: i32) -> i32 { a - b }\n    public func multiply(a: i32, b: i32) -> i32 { a * b }\n    public func divide(a: i32, b: i32) -> i32 { a / b }\n    public func remainder(a: i32, b: i32) -> i32 { a % b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i32 @add(i32 %0, i32 %1) local_unnamed_addr #0 {
body:
  %add = add i32 %1, %0
  ret i32 %add
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i32 @subtract(i32 %0, i32 %1) local_unnamed_addr #0 {
body:
  %sub = sub i32 %0, %1
  ret i32 %sub
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i32 @multiply(i32 %0, i32 %1) local_unnamed_addr #0 {
body:
  %mul = mul i32 %1, %0
  ret i32 %mul
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i32 @divide(i32 %0, i32 %1) local_unnamed_addr #0 {
body:
  %div = sdiv i32 %0, %1
  ret i32 %div
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define range(i32 -2147483647, -2147483648) i32 @remainder(i32 %0, i32 %1) local_unnamed_addr #0 {
body:
  %rem = srem i32 %0, %1
  ret i32 %rem
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
