crates/codira_codegen/src/snapshots/codira_codegen__test__arithmetic_op_u8.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func add(a: u8, b: u8) -> u8 { a + b }\n    public func subtract(a: u8, b: u8) -> u8 { a - b }\n    public func multiply(a: u8, b: u8) -> u8 { a * b }\n    public func divide(a: u8, b: u8) -> u8 { a / b }\n    public func remainder(a: u8, b: u8) -> u8 { a % b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i8 @add(i8 %0, i8 %1) local_unnamed_addr #0 {
body:
  %add = add i8 %1, %0
  ret i8 %add
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i8 @subtract(i8 %0, i8 %1) local_unnamed_addr #0 {
body:
  %sub = sub i8 %0, %1
  ret i8 %sub
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i8 @multiply(i8 %0, i8 %1) local_unnamed_addr #0 {
body:
  %mul = mul i8 %1, %0
  ret i8 %mul
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i8 @divide(i8 %0, i8 %1) local_unnamed_addr #0 {
body:
  %div = udiv i8 %0, %1
  ret i8 %div
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define range(i8 0, -1) i8 @remainder(i8 %0, i8 %1) local_unnamed_addr #0 {
body:
  %rem = urem i8 %0, %1
  ret i8 %rem
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
